[gd_scene load_steps=24 format=3 uid="uid://btf74en0epjeg"]

[ext_resource type="Script" path="res://scripts/world/player_world.gd" id="1_ksv7y"]
[ext_resource type="Texture2D" uid="uid://b6q0cyfk13a7f" path="res://assets_v2/Tiny Wonder Farm Free/characters/main character/idle.png" id="2_syv51"]
[ext_resource type="Texture2D" uid="uid://cmt5w1tsocryj" path="res://assets_v2/Tiny Wonder Farm Free/characters/main character/walk.png" id="3_py7qi"]
[ext_resource type="AudioStream" uid="uid://bpwu2fy28buy4" path="res://sounds/collectcoin-6075.mp3" id="4_2f1v8"]
[ext_resource type="AudioStream" uid="uid://c2cvd4nsajoiy" path="res://sounds/coin-pickup-98269.mp3" id="5_fe6q4"]
[ext_resource type="AudioStream" uid="uid://sp3ykjtvkb8r" path="res://sounds/pop-1-35897.mp3" id="6_851lj"]
[ext_resource type="AudioStream" uid="uid://dbj6q1aaaq6vk" path="res://sounds/070255_footsteps-on-grass-39950.mp3" id="7_56bu7"]
[ext_resource type="Script" path="res://scripts/transition.gd" id="8_cp34a"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lt41r"]
radius = 4.75
height = 17.0

[sub_resource type="AtlasTexture" id="AtlasTexture_2wobf"]
atlas = ExtResource("2_syv51")
region = Rect2(0, 0, 25, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_5euw1"]
atlas = ExtResource("2_syv51")
region = Rect2(25, 0, 25, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_of64k"]
atlas = ExtResource("3_py7qi")
region = Rect2(0, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5i3g"]
atlas = ExtResource("3_py7qi")
region = Rect2(24, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1i7o"]
atlas = ExtResource("3_py7qi")
region = Rect2(48, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_20l0k"]
atlas = ExtResource("3_py7qi")
region = Rect2(72, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbds2"]
atlas = ExtResource("3_py7qi")
region = Rect2(96, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf84i"]
atlas = ExtResource("3_py7qi")
region = Rect2(120, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn3iq"]
atlas = ExtResource("3_py7qi")
region = Rect2(144, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_bh2l0"]
atlas = ExtResource("3_py7qi")
region = Rect2(168, 0, 24, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_sceuf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wobf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5euw1")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_of64k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5i3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1i7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20l0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbds2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf84i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn3iq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bh2l0")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_ijdqq"]
resource_name = "fade_in"
length = 1.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.3)
}

[sub_resource type="Animation" id="Animation_lktg8"]
resource_name = "fade_out"
length = 1.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wcsjq"]
_data = {
"fade_in": SubResource("Animation_ijdqq"),
"fade_out": SubResource("Animation_lktg8")
}

[node name="player_world" type="CharacterBody2D" groups=["player"]]
scale = Vector2(2, 2)
collision_mask = 2
script = ExtResource("1_ksv7y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.25, 1)
shape = SubResource("CapsuleShape2D_lt41r")

[node name="audio" type="Node2D" parent="."]

[node name="cristals_sound" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource("4_2f1v8")

[node name="points_sound" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource("5_fe6q4")
volume_db = -20.0

[node name="collect_sound" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource("6_851lj")
volume_db = -20.0

[node name="footsteps" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource("7_56bu7")
volume_db = -10.0

[node name="anim" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-1, 1)
scale = Vector2(0.875, 0.85)
sprite_frames = SubResource("SpriteFrames_sceuf")
animation = &"idle"

[node name="camera" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)

[node name="transition" type="Control" parent="camera"]
z_index = 3
layout_mode = 3
anchors_preset = 0
offset_left = -321.0
offset_top = -162.0
offset_right = 320.0
offset_bottom = 163.0
script = ExtResource("8_cp34a")

[node name="ColorRect" type="ColorRect" parent="camera/transition"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -5.0
offset_right = -5.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="animation" type="AnimationPlayer" parent="camera/transition"]
libraries = {
"": SubResource("AnimationLibrary_wcsjq")
}
